Bet Slip (Entry 5)

--- a/stake.html
+++ b/stake.html
@@ -1080,7 +1080,7 @@
                 </div>
 
                 <div class="match-cards-container">
-                    <div class="match-card">
+                    <div class="match-card hidden">
                         <div class="match-header display-flex-center">
                             <div class="mh-wrapper display-flex-btw">
                                 <div class="mh-title cursor">Manchester City FC - Chelsea FC</div>
@@ -1094,7 +1094,7 @@
                                 <div class="mcc-side1">
                                     <div class="match-pick">Manchester City FC</div>
                                     <div class="stake-amount">
-                                        <input type="number">
+                                        <input type="number" value="0.00">
                                         <img src="Gallery\crypto-gallery\us-dollar.svg" alt="">
                                     </div>
                                 </div>
@@ -1102,7 +1102,7 @@
                                     <div class="mp-odd">1.65</div>
                                     <div class="singles-payout">
                                         <span class="sp-est">Est. Payout</span>
-                                        <div class="s-dollars align-center"><span>$0.00</span> <img src="Gallery\crypto-gallery\btc.svg" alt=""></div>
+                                        <div class="s-dollars align-center"><span>$0.00</span> <img src="Gallery\crypto-gallery\btc.svg" id="mc-image" alt=""></div>
                                     </div>
                                 </div>
                             </div>
