--- a/stake.html
+++ b/stake.html
@@ -1097,7 +1097,7 @@
                                 <div class="mcc-side1">
                                     <div class="match-pick">Manchester City FC</div>
                                     <div class="stake-amount align-center">
-                                        <input type="number" id="" value="0.00">
+                                        <input type="number" id="" min="0.00" max="10000000000" value="0.00">
                                         <div class="input-image"><img src="Gallery\crypto-gallery\us-dollar.svg" alt=""></div>
                                     </div>
                                 </div>
@@ -1105,7 +1105,7 @@
                                     <div class="mp-odd ac-end">1.65</div>
                                     <div class="singles-payout ac-end">
                                         <span class="sp-est">Est. Payout</span>
-                                        <div class="s-dollars align-center"><span>$0.00</span> <img src="Gallery\crypto-gallery\btc.svg" id="mc-image" alt=""></div>
+                                        <div class="s-dollars align-center"><span class="sd-amount">$<span>0.00</span></span> <img src="Gallery\crypto-gallery\btc.svg" id="mc-image" alt=""></div>
                                     </div>
                                 </div>
                             </div>
@@ -1121,14 +1121,14 @@
                     <div class="total-stake display-flex-btw">
                         <span class="co-text">Total Stake</span>
                         <div class="ts-amount align-center">
-                            <span>$0.00</span>
+                            $<span>0.00</span>
                             <img src="" id="checkout-img" alt="">
                         </div>
                     </div>
                     <div class="est-payout display-flex-btw">
                         <span class="co-text">Est. Payout</span>
                         <div class="est-amount align-center">
-                            <span>$0.00</span>
+                            $<span>0.00</span>
                             <img src="Gallery\crypto-gallery\btc.svg" id="checkout-img" alt="">
                         </div>
                     </div>
