Bet Slip (Entry 7)

--- a/stake.html
+++ b/stake.html
@@ -1037,7 +1037,10 @@
                 </div>
             </div>
 
-            <div class="collapse-bl display-flex-center"><img src="Gallery\gallery2\collapse-bl.svg" alt=""></div>
+            <div class="collapse-betslip">
+                <div class="cb-image display-flex-center"><img src="Gallery\gallery2\collapse-bl.svg" alt=""></div>
+                <div class="cb-hover">Collapse Betslip</div>
+            </div>
         </div>
 
         <div class="bet-type-container align-center">
@@ -1149,7 +1152,7 @@
                     <div class="est-payout display-flex-btw">
                         <span class="co-text">Est. Payout</span>
                         <div class="est-amount align-center">
-                            <span>$0.00</span>
+                            $<span>0.00</span>
                             <img src="Gallery\crypto-gallery\btc.svg" id="checkout-img" alt="">
                         </div>
                     </div>
