--- a/stake.html
+++ b/stake.html
@@ -266,9 +266,9 @@
                         </div>
                         <div class="bs-menu2 display-flex-btw">
                             <div class="menu2-left display-flex-center">
-                                <div class="bs-menu-live menu2-option menu2-active display-flex-center">Live & Upcoming</div>
-                                <div class="bs-menu-outright menu2-option display-flex-center">Outrights</div>
-                                <div class="bs-menu-as menu2-option display-flex-center">All Soccer</div>
+                                <div class="bs-menu-live menu-option menu-active display-flex-center">Live & Upcoming</div>
+                                <div class="bs-menu-outright menu-option display-flex-center">Outrights</div>
+                                <div class="bs-menu-as menu-option display-flex-center">All Soccer</div>
                             </div>
                             <div class="menu2-right">
                                 <div class="three-way">
@@ -1004,6 +1004,119 @@
                                     </div>
                                 </div>
                             </div>
+                        </div>
+                    </div>
+
+                    <div class="bs-menu3">
+                        <div class="menu3-header display-flex-center">
+                            <div class="bs-menu-bets menu-option display-flex-center">All Bets</div>
+                            <div class="bs-menu-hr menu-option menu-active display-flex-center">High Rollers</div>
+                            <div class="bs-menu-rl menu-option display-flex-center">Race Leaderboard <span></span></div>
+                        </div>
+
+                        <div class="menu3-contents">
+                            <!-- <div class="mc-header display-flex-btw">
+                                <span>Events</span>
+                                <span>User</span>
+                                <span>Time</span>
+                                <span>Odds</span>
+                                <span>Bet Amount</span>
+                            </div>
+
+                            <div class="events-container">
+                                <div class="event-card display-flex-btw">
+                                    <div class="ec-event align-center"></div>
+                                    <div class="ec-user align-center"> </div>
+                                    <div class="ec-time align-center">7:39 PM</div>
+                                    <div class="ec-odd align-center">6.40</div>
+                                    <div class="ec-bet align-center"><span>$1,045.92</span> <img src="Gallery\crypto-gallery\jyp.svg" alt=""></div>
+                                </div>
+                            </div> -->
+
+                            <table>
+                                <thead>
+                                    <tr>
+                                        <td class="mc-event">Events</td>
+                                        <td class="mc-user">User</td>
+                                        <td class="mc-time">Time</td>
+                                        <td class="mc-odd">Odds</td>
+                                        <td class="mc-bet">Bet Amount</td>
+                                    </tr>
+                                </thead>
+
+                                <tbody>
+                                    <tr class="">
+                                        <td class="mc-event"><span class="align-center"><img src="Gallery\gallery1\soccer.svg" alt=""> WOL - LFC</span></td>
+                                        <td class="mc-user"><img src="Gallery\gallery2\hidden.svg" alt=""> Hidden</span></td>
+                                        <td class="mc-time">8:30 PM</td>
+                                        <td class="mc-odd">6.40</td>
+                                        <td class="mc-bet">$1,045.92 <img src="Gallery\crypto-gallery\jyp.svg" alt=""></td>
+                                    </tr>
+                                    <tr class="">
+                                        <td class="mc-event"><span class="align-center"><img src="Gallery\gallery1\soccer.svg" alt=""> WOL - LFC</span></td>
+                                        <td class="mc-user"><img src="Gallery\gallery2\hidden.svg" alt=""> Hidden</span></td>
+                                        <td class="mc-time">8:30 PM</td>
+                                        <td class="mc-odd">6.40</td>
+                                        <td class="mc-bet">$1,045.92 <img src="Gallery\crypto-gallery\jyp.svg" alt=""></td>
+                                    </tr>
+                                    <tr class="">
+                                        <td class="mc-event"><span class="align-center"><img src="Gallery\gallery1\soccer.svg" alt=""> WOL - LFC</span></td>
+                                        <td class="mc-user"><img src="Gallery\gallery2\hidden.svg" alt=""> Hidden</span></td>
+                                        <td class="mc-time">8:30 PM</td>
+                                        <td class="mc-odd">6.40</td>
+                                        <td class="mc-bet">$1,045.92 <img src="Gallery\crypto-gallery\jyp.svg" alt=""></td>
+                                    </tr>
+                                    <tr class="">
+                                        <td class="mc-event"><span class="align-center"><img src="Gallery\gallery1\soccer.svg" alt=""> WOL - LFC</span></td>
+                                        <td class="mc-user"><img src="Gallery\gallery2\hidden.svg" alt=""> Hidden</span></td>
+                                        <td class="mc-time">8:30 PM</td>
+                                        <td class="mc-odd">6.40</td>
+                                        <td class="mc-bet">$1,045.92 <img src="Gallery\crypto-gallery\jyp.svg" alt=""></td>
+                                    </tr>
+                                    <tr class="">
+                                        <td class="mc-event"><span class="align-center"><img src="Gallery\gallery1\soccer.svg" alt=""> WOL - LFC</span></td>
+                                        <td class="mc-user"><img src="Gallery\gallery2\hidden.svg" alt=""> Hidden</span></td>
+                                        <td class="mc-time">8:30 PM</td>
+                                        <td class="mc-odd">6.40</td>
+                                        <td class="mc-bet">$1,045.92 <img src="Gallery\crypto-gallery\jyp.svg" alt=""></td>
+                                    </tr>
+                                    <tr class="">
+                                        <td class="mc-event"><span class="align-center"><img src="Gallery\gallery1\soccer.svg" alt=""> WOL - LFC</span></td>
+                                        <td class="mc-user"><img src="Gallery\gallery2\hidden.svg" alt=""> Hidden</span></td>
+                                        <td class="mc-time">8:30 PM</td>
+                                        <td class="mc-odd">6.40</td>
+                                        <td class="mc-bet">$1,045.92 <img src="Gallery\crypto-gallery\jyp.svg" alt=""></td>
+                                    </tr>
+                                    <tr class="">
+                                        <td class="mc-event"><span class="align-center"><img src="Gallery\gallery1\soccer.svg" alt=""> WOL - LFC</span></td>
+                                        <td class="mc-user"><img src="Gallery\gallery2\hidden.svg" alt=""> Hidden</span></td>
+                                        <td class="mc-time">8:30 PM</td>
+                                        <td class="mc-odd">6.40</td>
+                                        <td class="mc-bet">$1,045.92 <img src="Gallery\crypto-gallery\jyp.svg" alt=""></td>
+                                    </tr>
+                                    <tr class="">
+                                        <td class="mc-event"><span class="align-center"><img src="Gallery\gallery1\soccer.svg" alt=""> WOL - LFC</span></td>
+                                        <td class="mc-user"><img src="Gallery\gallery2\hidden.svg" alt=""> Hidden</span></td>
+                                        <td class="mc-time">8:30 PM</td>
+                                        <td class="mc-odd">6.40</td>
+                                        <td class="mc-bet">$1,045.92 <img src="Gallery\crypto-gallery\jyp.svg" alt=""></td>
+                                    </tr>
+                                    <tr class="">
+                                        <td class="mc-event"><span class="align-center"><img src="Gallery\gallery1\soccer.svg" alt=""> WOL - LFC</span></td>
+                                        <td class="mc-user"><img src="Gallery\gallery2\hidden.svg" alt=""> Hidden</span></td>
+                                        <td class="mc-time">8:30 PM</td>
+                                        <td class="mc-odd">6.40</td>
+                                        <td class="mc-bet">$1,045.92 <img src="Gallery\crypto-gallery\jyp.svg" alt=""></td>
+                                    </tr>
+                                    <tr class="">
+                                        <td class="mc-event"><span class="align-center"><img src="Gallery\gallery1\soccer.svg" alt=""> WOL - LFC</span></td>
+                                        <td class="mc-user"><img src="Gallery\gallery2\hidden.svg" alt=""> Hidden</span></td>
+                                        <td class="mc-time">8:30 PM</td>
+                                        <td class="mc-odd">6.40</td>
+                                        <td class="mc-bet">$3,045.92 <img src="Gallery\crypto-gallery\jyp.svg" alt=""></td>
+                                    </tr>
+                                </tbody>
+                            </table>
                         </div>
                     </div>
                 </div>
