Bet Slip (Entry 8)

--- a/stake.html
+++ b/stake.html
@@ -1007,14 +1007,14 @@
                         </div>
                     </div>
 
-                    <div class="bs-menu3">
-                        <div class="menu3-header display-flex-center">
+                    <div class="open-bets">
+                        <div class="ob-header display-flex-center">
                             <div class="bs-menu-bets menu-option display-flex-center">All Bets</div>
                             <div class="bs-menu-hr menu-option menu-active display-flex-center">High Rollers</div>
                             <div class="bs-menu-rl menu-option display-flex-center">Race Leaderboard <span></span></div>
                         </div>
 
-                        <div class="menu3-contents">
+                        <div class="ob-contents">
                             <table>
                                 <thead>
                                     <tr>
@@ -1043,7 +1043,7 @@
                                     </tr>
                                     <tr class="">
                                         <td class="mc-event"><span class="align-center"><img src="Gallery\gallery1\soccer.svg" alt=""> Crystal Palace FC - Leeds United</span></td>
-                                        <td class="mc-user known-user">adam</span></td>
+                                        <td class="mc-user known-user"><span>adam</span></td>
                                         <td class="mc-time">8:20 PM</td>
                                         <td class="mc-odd">3.40</td>
                                         <td class="mc-bet"><span class="align-center">$3,098.22 <img src="Gallery\crypto-gallery\btc.svg" alt=""></span></td>
@@ -1071,7 +1071,7 @@
                                     </tr>
                                     <tr class="">
                                         <td class="mc-event"><span class="align-center"><img src="Gallery\gallery1\soccer.svg" alt=""> PSV Eindhoven - Vitesse Arnhem</span></td>
-                                        <td class="mc-user known-user"><span class="display-flex-center">Hakeem</span></td>
+                                        <td class="mc-user known-user"><span>Hakeem</span></td>
                                         <td class="mc-time">8:05 PM</td>
                                         <td class="mc-odd">1.38</td>
                                         <td class="mc-bet"><span class="align-center">$5,000.30 <img src="Gallery\crypto-gallery\bch.svg" alt=""></span></td>
@@ -1238,7 +1238,7 @@
             <div class="check-out-multi display-flex-center">
                 <div class="co-wrapper">
                     <div class="multi-stake-amount align-center">
-                        <input type="number" id="" value="0.00">
+                        <input type="number" id="" min="0.00" max="10000000000" value="0.00">
                         <img src="Gallery\crypto-gallery\us-dollar.svg" alt="">
                     </div>
                     <div class="total-stake display-flex-btw">
