Bet Slip (Entry 9)

--- a/stake.html
+++ b/stake.html
@@ -1231,6 +1231,7 @@
                             <img src="Gallery\crypto-gallery\btc.svg" id="checkout-img" alt="">
                         </div>
                     </div>
+                    <div class="above-balance">You cannot bet more than your balance.</div>
                     <button class="place-sbet">Place Single Bet</button>
                 </div>
             </div>
@@ -1252,6 +1253,7 @@
                             <img src="Gallery\crypto-gallery\btc.svg" id="checkout-img" alt="">
                         </div>
                     </div>
+                    <div class="above-balance">You cannot bet more than your balance.</div>
                     <button class="place-mbet">Place Multi Bet</button>
                 </div>
             </div>
