Bet Slip (Entry 10)

--- a/stake.html
+++ b/stake.html
@@ -1254,6 +1254,7 @@
                         </div>
                     </div>
                     <div class="above-balance">You cannot bet more than your balance.</div>
+                    <div class="multiple-selections">Multiple selections from some event cannot be combined into a Multibet.</div>
                     <button class="place-mbet">Place Multi Bet</button>
                 </div>
             </div>
